--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
         }
 
         .filter-option {
-            display: block;
+            display: flex;
+            align-items: center;
+            gap: 8px;
             padding: 8px 12px;
             margin-bottom: 5px;
             background-color: #2C3539;
@@ -96,6 +98,12 @@
             cursor: pointer;
             transition: background-color 0.2s;
             font-size: 14px;
+        }
+
+        .filter-option img {
+            width: 24px;
+            height: 24px;
+            object-fit: contain;
         }
 
         .filter-option:hover {
@@ -163,6 +171,14 @@
         .build-info-item {
             display: flex;
             flex-direction: column;
+            align-items: center;
+        }
+
+        .build-info-item img {
+            width: 32px;
+            height: 32px;
+            object-fit: contain;
+            margin-bottom: 5px;
         }
 
         .build-info-label {
@@ -257,6 +273,32 @@
         .like-btn.liked {
             background-color: #666;
         }
+
+        .modal-icon {
+            width: 48px;
+            height: 48px;
+            object-fit: contain;
+            vertical-align: middle;
+            margin-right: 8px;
+        }
+
+        .aspect-list {
+            display: flex;
+            gap: 10px;
+            flex-wrap: wrap;
+        }
+
+        .aspect-item {
+            display: flex;
+            align-items: center;
+            gap: 5px;
+        }
+
+        .aspect-item img {
+            width: 24px;
+            height: 24px;
+            object-fit: contain;
+        }
     </style>
 </head>
 <body>
@@ -286,24 +328,50 @@
             <div class="filter-section">
                 <h3>Weapon</h3>
                 <div class="filter-option active" data-weapon="all">All Weapons</div>
-                <div class="filter-option" data-weapon="Engine Rifle">Engine Rifle</div>
-                <div class="filter-option" data-weapon="Shotgun">Shotgun</div>
-                <div class="filter-option" data-weapon="Tesla Gun">Tesla Gun</div>
-                <div class="filter-option" data-weapon="Brine Revolver">Brine Revolver</div>
-                <div class="filter-option" data-weapon="Disc Thrower">Disc Thrower</div>
-                <div class="filter-option" data-weapon="Combat Bow">Combat Bow</div>
-                <div class="filter-option" data-weapon="Plasma Launcher">Plasma Launcher</div>
-                <div class="filter-option" data-weapon="Fish Deity">Fish Deity</div>
+                <div class="filter-option" data-weapon="Engine Rifle">
+                    <img src="images/weapons/Engine_Rifle_Icon.png" alt=""> Engine Rifle
+                </div>
+                <div class="filter-option" data-weapon="Shotgun">
+                    <img src="images/weapons/Shotgun_Icon.png" alt=""> Shotgun
+                </div>
+                <div class="filter-option" data-weapon="Tesla Gun">
+                    <img src="images/weapons/Tesla_Gun_Icon.png" alt=""> Tesla Gun
+                </div>
+                <div class="filter-option" data-weapon="Brine Revolver">
+                    <img src="images/weapons/Brine_Revolver_Icon.png" alt=""> Brine Revolver
+                </div>
+                <div class="filter-option" data-weapon="Disc Thrower">
+                    <img src="images/weapons/Disc_Thrower_Icon.png" alt=""> Disc Thrower
+                </div>
+                <div class="filter-option" data-weapon="Combat Bow">
+                    <img src="images/weapons/Combat_Bow_Icon.png" alt=""> Combat Bow
+                </div>
+                <div class="filter-option" data-weapon="Plasma Launcher">
+                    <img src="images/weapons/Plasma_Launcher_Icon.png" alt=""> Plasma Launcher
+                </div>
+                <div class="filter-option" data-weapon="Fish Deity">
+                    <img src="images/weapons/Fish_Deity_Icon.png" alt=""> Fish Deity
+                </div>
             </div>
 
             <div class="filter-section">
                 <h3>Ability</h3>
                 <div class="filter-option active" data-ability="all">All Abilities</div>
-                <div class="filter-option" data-ability="Frag Grenade">Frag Grenade</div>
-                <div class="filter-option" data-ability="Anchor">Anchor</div>
-                <div class="filter-option" data-ability="Ancient Core">Ancient Core</div>
-                <div class="filter-option" data-ability="Brine Field">Brine Field</div>
-                <div class="filter-option" data-ability="Turret">Turret</div>
+                <div class="filter-option" data-ability="Frag Grenade">
+                    <img src="images/abilities/Frag_Grenade_Icon.png" alt=""> Frag Grenade
+                </div>
+                <div class="filter-option" data-ability="Anchor">
+                    <img src="images/abilities/Anchor_Icon.png" alt=""> Anchor
+                </div>
+                <div class="filter-option" data-ability="Ancient Core">
+                    <img src="images/abilities/Ancient_Core_Icon.png" alt=""> Ancient Core
+                </div>
+                <div class="filter-option" data-ability="Brine Field">
+                    <img src="images/abilities/Brine_Field_Icon.png" alt=""> Brine Field
+                </div>
+                <div class="filter-option" data-ability="Turret">
+                    <img src="images/abilities/Turret_Icon.png" alt=""> Turret
+                </div>
             </div>
         </aside>
 
@@ -328,7 +396,39 @@
         let currentAbilityFilter = 'all';
         let likedBuilds = new Set();
 
-        // Load builds and liked status from localStorage
+        const weaponIcons = {
+            'Engine Rifle': 'images/weapons/Engine_Rifle_Icon.png',
+            'Shotgun': 'images/weapons/Shotgun_Icon.png',
+            'Tesla Gun': 'images/weapons/Tesla_Gun_Icon.png',
+            'Brine Revolver': 'images/weapons/Brine_Revolver_Icon.png',
+            'Disc Thrower': 'images/weapons/Disc_Thrower_Icon.png',
+            'Combat Bow': 'images/weapons/Combat_Bow_Icon.png',
+            'Plasma Launcher': 'images/weapons/Plasma_Launcher_Icon.png',
+            'Fish Deity': 'images/weapons/Fish_Deity_Icon.png'
+        };
+
+        const abilityIcons = {
+            'Frag Grenade': 'images/abilities/Frag_Grenade_Icon.png',
+            'Anchor': 'images/abilities/Anchor_Icon.png',
+            'Ancient Core': 'images/abilities/Ancient_Core_Icon.png',
+            'Brine Field': 'images/abilities/Brine_Field_Icon.png',
+            'Turret': 'images/abilities/Turret_Icon.png'
+        };
+
+        const aspectIcons = {
+            'Blood': 'images/aspects/Blood_Icon.png',
+            'Barrier': 'images/aspects/Barrier_Icon.png',
+            'Flares': 'images/aspects/Flares_Icon.png',
+            'Goldburst': 'images/aspects/Goldburst_Icon.png',
+            'Frozen': 'images/aspects/Frozen_Icon.png',
+            'Chain Lightning': 'images/aspects/Chain_Lightning_Icon.png',
+            'Shadows': 'images/aspects/Shadows_Icon.png',
+            'Tentacles': 'images/aspects/Tentacles_Icon.png',
+            'Spirit': 'images/aspects/Spirit_Icon.png',
+            'Windburst': 'images/aspects/Windburst_Icon.png'
+        };
+
+        // Load builds and liked status
         function loadData() {
             const savedBuilds = localStorage.getItem('abyssusBuilds');
             if (savedBuilds) {
@@ -415,10 +515,12 @@
                         <div class="build-author">by @${build.author}</div>
                         <div class="build-info">
                             <div class="build-info-item">
+                                ${build.weapon && weaponIcons[build.weapon] ? `<img src="${weaponIcons[build.weapon]}" alt="${build.weapon}">` : ''}
                                 <div class="build-info-label">Weapon</div>
                                 <div class="build-info-value">${build.weapon || 'None'}</div>
                             </div>
                             <div class="build-info-item">
+                                ${build.ability && abilityIcons[build.ability] ? `<img src="${abilityIcons[build.ability]}" alt="${build.ability}">` : ''}
                                 <div class="build-info-label">Ability</div>
                                 <div class="build-info-value">${build.ability || 'None'}</div>
                             </div>
@@ -438,6 +540,17 @@
             const details = document.getElementById('buildDetails');
             const isLiked = likedBuilds.has(build.id);
 
+            const weaponIcon = build.weapon && weaponIcons[build.weapon] ? `<img src="${weaponIcons[build.weapon]}" class="modal-icon" alt="${build.weapon}">` : '';
+            const abilityIcon = build.ability && abilityIcons[build.ability] ? `<img src="${abilityIcons[build.ability]}" class="modal-icon" alt="${build.ability}">` : '';
+
+            const aspectsHTML = [build.aspect1, build.aspect2, build.aspect3]
+                .filter(a => a)
+                .map(aspect => {
+                    const icon = aspectIcons[aspect] ? `<img src="${aspectIcons[aspect]}" alt="${aspect}">` : '';
+                    return `<div class="aspect-item">${icon}${aspect}</div>`;
+                })
+                .join('');
+
             details.innerHTML = `
                 <h2 style="color: #059669; margin-bottom: 10px;">${build.buildname}</h2>
                 <p style="color: #888; margin-bottom: 20px;">Created by @${build.author} on ${new Date(build.date).toLocaleDateString()}</p>
@@ -447,18 +560,18 @@
                 <div style="background-color: #0f0f0f; padding: 20px; border-radius: 4px; margin-bottom: 20px;">
                     <div style="display: grid; grid-template-columns: 2fr 1fr; gap: 20px; margin-bottom: 15px;">
                         <div>
-                            <strong style="color: #888;">Weapon:</strong> ${build.weapon || 'None'}<br>
+                            <strong style="color: #888;">Weapon:</strong> ${weaponIcon}${build.weapon || 'None'}<br>
                             <strong style="color: #888;">Primary:</strong> ${build.primary || 'None'}<br>
                             <strong style="color: #888;">Secondary:</strong> ${build.secondary || 'None'}
                         </div>
                         <div>
-                            <strong style="color: #888;">Ability:</strong> ${build.ability || 'None'}
+                            <strong style="color: #888;">Ability:</strong> ${abilityIcon}${build.ability || 'None'}
                         </div>
                     </div>
                     
                     <div style="margin-bottom: 15px;">
                         <strong style="color: #888;">Aspects:</strong><br>
-                        ${build.aspect1 || 'None'} | ${build.aspect2 || 'None'} | ${build.aspect3 || 'None'}
+                        <div class="aspect-list">${aspectsHTML || 'None'}</div>
                     </div>
 
                     <div style="display: grid; grid-template-columns: 2fr 1fr; gap: 20px; margin-bottom: 15px;">
