--- a/creator.html
+++ b/creator.html
@@ -260,32 +260,32 @@
                             <label>Aspect</label>
                             <select id="aspect1" onchange="updateAspectOptions()">
                                 <option value="">Select Aspect</option>
-                                <option value="Blessing1">Blessing1</option>
-                                <option value="Blessing2">Blessing2</option>
-                                <option value="Blessing3">Blessing3</option>
-                                <option value="Blessing4">Blessing4</option>
-                                <option value="Blessing5">Blessing5</option>
-                                <option value="Blessing6">Blessing6</option>
-                                <option value="Blessing7">Blessing7</option>
-                                <option value="Blessing8">Blessing8</option>
-                                <option value="Blessing9">Blessing9</option>
-                                <option value="Blessing10">Blessing10</option>
+                                <option value="Blood">Blood</option>
+                                <option value="Barrier">Barrier</option>
+                                <option value="Flares">Flares</option>
+                                <option value="Goldburst">Goldburst</option>
+                                <option value="Frozen">Frozen</option>
+                                <option value="Chain Lightning">Chain Lightning</option>
+                                <option value="Shadows">Shadows</option>
+                                <option value="Tentacles">Tentacles</option>
+                                <option value="Spirit">Spirit</option>
+                                <option value="Windburst">Windburst</option>
                             </select>
                         </div>
                         <div class="form-col">
                             <label>Aspect</label>
                             <select id="aspect2" onchange="updateAspectOptions()">
                                 <option value="">Select Aspect</option>
-                                <option value="Blessing1">Blessing1</option>
-                                <option value="Blessing2">Blessing2</option>
-                                <option value="Blessing3">Blessing3</option>
-                                <option value="Blessing4">Blessing4</option>
-                                <option value="Blessing5">Blessing5</option>
-                                <option value="Blessing6">Blessing6</option>
-                                <option value="Blessing7">Blessing7</option>
-                                <option value="Blessing8">Blessing8</option>
-                                <option value="Blessing9">Blessing9</option>
-                                <option value="Blessing10">Blessing10</option>
+                                <option value="Blood">Blood</option>
+                                <option value="Barrier">Barrier</option>
+                                <option value="Flares">Flares</option>
+                                <option value="Goldburst">Goldburst</option>
+                                <option value="Frozen">Frozen</option>
+                                <option value="Chain Lightning">Chain Lightning</option>
+                                <option value="Shadows">Shadows</option>
+                                <option value="Tentacles">Tentacles</option>
+                                <option value="Spirit">Spirit</option>
+                                <option value="Windburst">Windburst</option>
                             </select>
                         </div>
                     </div>
@@ -328,16 +328,16 @@
                         <label style="display: block; background-color: #2C3539; padding: 8px; text-align: center; font-weight: bold; border-radius: 4px; margin-bottom: 5px;">Aspect</label>
                         <select id="aspect3" style="width: 100%;" onchange="updateAspectOptions()">
                             <option value="">Select Aspect</option>
-                            <option value="Blessing1">Blessing1</option>
-                            <option value="Blessing2">Blessing2</option>
-                            <option value="Blessing3">Blessing3</option>
-                            <option value="Blessing4">Blessing4</option>
-                            <option value="Blessing5">Blessing5</option>
-                            <option value="Blessing6">Blessing6</option>
-                            <option value="Blessing7">Blessing7</option>
-                            <option value="Blessing8">Blessing8</option>
-                            <option value="Blessing9">Blessing9</option>
-                            <option value="Blessing10">Blessing10</option>
+                            <option value="Blood">Blood</option>
+                            <option value="Barrier">Barrier</option>
+                            <option value="Flares">Flares</option>
+                            <option value="Goldburst">Goldburst</option>
+                            <option value="Frozen">Frozen</option>
+                            <option value="Chain Lightning">Chain Lightning</option>
+                            <option value="Shadows">Shadows</option>
+                            <option value="Tentacles">Tentacles</option>
+                            <option value="Spirit">Spirit</option>
+                            <option value="Windburst">Windburst</option>
                         </select>
                     </div>
 
