--- a/creator.html
+++ b/creator.html
@@ -257,9 +257,9 @@
                 <!-- Weapon Column -->
                 <div class="weapon-column">
                     <div class="section-header">Weapon</div>
-                    <div class="select-with-icon" style="margin-bottom: 15px;">
+                    <div class="select-with-icon">
                         <img id="weaponIcon" class="selected-icon" src="" alt="">
-                        <select id="weaponSelect" style="width: 100%;" onchange="updateWeaponIcon()">
+                        <select id="weaponSelect" style="width: 100%; margin-bottom: 15px;" onchange="updateWeaponIcon()">
                             <option value="">Select Weapon</option>
                             <option value="Engine Rifle">Engine Rifle</option>
                             <option value="Shotgun">Shotgun</option>
