--- a/creator.html
+++ b/creator.html
@@ -257,9 +257,9 @@
                 <!-- Weapon Column -->
                 <div class="weapon-column">
                     <div class="section-header">Weapon</div>
-                    <div class="select-with-icon">
+                    <div class="select-with-icon" style="margin-bottom: 15px;">
                         <img id="weaponIcon" class="selected-icon" src="" alt="">
-                        <select id="weaponSelect" style="width: 100%; margin-bottom: 15px;" onchange="updateWeaponIcon()">
+                        <select id="weaponSelect" style="width: 100%;" onchange="updateWeaponIcon()">
                             <option value="">Select Weapon</option>
                             <option value="Engine Rifle">Engine Rifle</option>
                             <option value="Shotgun">Shotgun</option>
@@ -298,7 +298,7 @@
                             <label>Aspect</label>
                             <div class="select-with-icon">
                                 <img id="aspect1Icon" class="selected-icon" src="" alt="">
-                                <select id="aspect1" onchange="updateAspectOptions(); updateAspectIcons()">
+                                <select id="aspect1" style="width: 100%;" onchange="updateAspectOptions(); updateAspectIcons()">
                                     <option value="">Select Aspect</option>
                                     <option value="Blood">Blood</option>
                                     <option value="Barrier">Barrier</option>
@@ -317,7 +317,7 @@
                             <label>Aspect</label>
                             <div class="select-with-icon">
                                 <img id="aspect2Icon" class="selected-icon" src="" alt="">
-                                <select id="aspect2" onchange="updateAspectOptions(); updateAspectIcons()">
+                                <select id="aspect2" style="width: 100%;" onchange="updateAspectOptions(); updateAspectIcons()">
                                     <option value="">Select Aspect</option>
                                     <option value="Blood">Blood</option>
                                     <option value="Barrier">Barrier</option>
@@ -357,9 +357,9 @@
                 <!-- Ability Column -->
                 <div class="ability-column">
                     <div class="section-header">Ability</div>
-                    <div class="select-with-icon" style="margin-bottom: 15px;">
+                    <div class="select-with-icon">
                         <img id="abilityIcon" class="selected-icon" src="" alt="">
-                        <select id="abilitySelect" style="width: 100%;" onchange="updateAbilityIcon()">
+                        <select id="abilitySelect" style="width: 100%; margin-bottom: 15px;" onchange="updateAbilityIcon()">
                             <option value="">Select Ability</option>
                             <option value="Frag Grenade">Frag Grenade</option>
                             <option value="Anchor">Anchor</option>
