--- a/creator.html
+++ b/creator.html
@@ -357,9 +357,9 @@
                 <!-- Ability Column -->
                 <div class="ability-column">
                     <div class="section-header">Ability</div>
-                    <div class="select-with-icon">
+                    <div class="select-with-icon" style="margin-bottom: 15px;">
                         <img id="abilityIcon" class="selected-icon" src="" alt="">
-                        <select id="abilitySelect" style="width: 100%; margin-bottom: 15px;" onchange="updateAbilityIcon()">
+                        <select id="abilitySelect" style="width: 100%;" onchange="updateAbilityIcon()">
                             <option value="">Select Ability</option>
                             <option value="Frag Grenade">Frag Grenade</option>
                             <option value="Anchor">Anchor</option>
